--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "cis-1090-lab7",
     "version": "1.0.0",
-    "author": "bkuker <bill.kuker@castleton.edu>",
+    "author": "sezzo see09150@vsc.edu",
     "type": "module",
     "scripts": {
         "test": "mocha"
